# BBS_Server/controllers/user_profile.go
@@ -68,6 +68,7 @@ func (c *UserProfileController) GetOne() {
 // GetAll ...
 // @Title Get All
 // @Description get UserProfile
+// @Param   singleuser query string false   "username"
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
@@ -84,48 +85,62 @@ func (c *UserProfileController) GetAll() {
 	var query = make(map[string]string)
 	var limit int64 = 10
 	var offset int64
-
-	// fields: col1,col2,entity.col3
-	if v := c.GetString("fields"); v != "" {
-		fields = strings.Split(v, ",")
-	}
-	// limit: 10 (default is 10)
-	if v, err := c.GetInt64("limit"); err == nil {
-		limit = v
-	}
-	// offset: 0 (default is 0)
-	if v, err := c.GetInt64("offset"); err == nil {
-		offset = v
-	}
-	// sortby: col1,col2
-	if v := c.GetString("sortby"); v != "" {
-		sortby = strings.Split(v, ",")
-	}
-	// order: desc,asc
-	if v := c.GetString("order"); v != "" {
-		order = strings.Split(v, ",")
-	}
-	// query: k:v,k:v
-	if v := c.GetString("query"); v != "" {
-		for _, cond := range strings.Split(v, ",") {
-			kv := strings.SplitN(cond, ":", 2)
-			if len(kv) != 2 {
-				c.Data["json"] = errors.New("Error: invalid query key/value pair")
-				c.ServeJSON()
-				return
+	// singleuser : username find user profile with ranking
+	if v := c.GetString("singleuser");v!=""{
+			up,err:=models.GetSingleUserProfileByUsername(v)
+		if err != nil {
+			c.Data["json"] = err.Error()
+			c.ServeJSON()
+		} else {
+			c.Data["json"] = up
+			c.ServeJSON()
+		}
+	}else {
+		// fields: col1,col2,entity.col3
+		if v := c.GetString("fields"); v != "" {
+			fields = strings.Split(v, ",")
+		}
+		// limit: 10 (default is 10)
+		if v, err := c.GetInt64("limit"); err == nil {
+			limit = v
+		}
+		// offset: 0 (default is 0)
+		if v, err := c.GetInt64("offset"); err == nil {
+			offset = v
+		}
+		// sortby: col1,col2
+		if v := c.GetString("sortby"); v != "" {
+			sortby = strings.Split(v, ",")
+		}
+		// order: desc,asc
+		if v := c.GetString("order"); v != "" {
+			order = strings.Split(v, ",")
+		}
+		// query: k:v,k:v
+		if v := c.GetString("query"); v != "" {
+			for _, cond := range strings.Split(v, ",") {
+				kv := strings.SplitN(cond, ":", 2)
+				if len(kv) != 2 {
+					c.Data["json"] = errors.New("Error: invalid query key/value pair")
+					c.ServeJSON()
+					return
+				}
+				k, v := kv[0], kv[1]
+				query[k] = v
 			}
-			k, v := kv[0], kv[1]
-			query[k] = v
+		}
+
+		l, err := models.GetAllUserProfile(query, fields, sortby, order, offset, limit)
+		if err != nil {
+			c.Data["json"] = err.Error()
+			c.ServeJSON()
+		} else {
+			c.Data["json"] = l
+			c.ServeJSON()
 		}
 	}
 
-	l, err := models.GetAllUserProfile(query, fields, sortby, order, offset, limit)
-	if err != nil {
-		c.Data["json"] = err.Error()
-	} else {
-		c.Data["json"] = l
-	}
-	c.ServeJSON()
+
 }
 
 // Put ...
